@@ -3,6 +3,7 @@
 
 == 1.12.0
 
+* Support the status `WARNING` in the summary table and rule results
 * Added support for rendering PlantUML using the Eclipse Layout Kernel (Elk)
 * JDOT was replaced by Smetana for rendering the PlantUML diagram when no local GraphViz installation is used.
 * Delayed initialization of PlantUML to avoid unnecessary messages if GraphViz is not installed
